change to sh
